; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_m0110.c_raw2scan.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_m0110.c_raw2scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M0110_NULL = common dso_local global i32 0, align 4
@M0110_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @raw2scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @raw2scan(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @M0110_NULL, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @M0110_NULL, align 4
  br label %23

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @M0110_ERROR, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i32, i32* @M0110_ERROR, align 4
  br label %21

14:                                               ; preds = %8
  %15 = load i32, i32* %2, align 4
  %16 = and i32 %15, 128
  %17 = load i32, i32* %2, align 4
  %18 = and i32 %17, 127
  %19 = ashr i32 %18, 1
  %20 = or i32 %16, %19
  br label %21

21:                                               ; preds = %14, %12
  %22 = phi i32 [ %13, %12 ], [ %20, %14 ]
  br label %23

23:                                               ; preds = %21, %6
  %24 = phi i32 [ %7, %6 ], [ %22, %21 ]
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
